code/internet/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: docker.io/georgiafrankinstain/frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
  selector:
    matchLabels:
      app: frontend
