code/internet/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
  - port: 80            # The port this service is available on
    targetPort: 80    # Points to your named containerPort
    protocol: TCP
    name: http
  - port: 443           # HTTPS port
    targetPort: 443   # Points to your named https containerPort
    protocol: TCP
    name: https
  type: ClusterIP    # Exposes the service externally
  sessionAffinity: None
